--- a/about.html
+++ b/about.html
@@ -3,15 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>H-Thai-ML - About</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="Menu.html">Menu</a>
+            </li>
+            <li>
+                <a class= "pageID" href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- TODO: Banner Image here-->
+    <div id ="banner">
+        <img src="assets/images/banner.png" alt="Banner">
+    </div>
     <!-- TODO: Banner Image here-->
     <main>
+        <h1>About Us</h1>
+        <img src="assets/images/about.jpg" alt="about">
+        <h2>Our Locations</h2>
+        <div>
+            <ul>
+                <li>New York City, NY</li>
+                <li>Atlantic City, NJ</li>
+                <li>San Francisco, CA</li>
+            </ul>
+        </div>
         <!-- About page code here -->
+        <h2>Our story begins in San Francisco when our Grandfather migrated from Thailandia and working as kitchen helper learned the skills that eventyally lead to him to become a great Chef </h2>
     </main>
 </body>
 </html>
