--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>H-Thai-ML - Contact</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" 
+        href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+        crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="Menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a class= "pageID" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id ="banner">
+        <img src="assets/images/banner.png" alt="Banner">
+    </div>
+
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,7 +44,13 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong><i class="fa fa-phone"></i> Phone Number:</strong> 123-4567
+        </p>
+        <p>
+            <strong><i class="fa fa-envelope"></i> email:</strong> thaifood@thailandia.com
+        </p>
+        <p>
+            <strong><i class="fa fa-map-marker"></i> address:</strong> 666 Fifth Ave, NY, NY 10016
         </p>
     </main>
 </body>
