--- a/index.html
+++ b/index.html
@@ -9,10 +9,42 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a class= "pageID" href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="Menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id ="banner">
+        <img src="assets/images/banner.png" alt="Banner">
+    </div>
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <h2>We serve the best Thai food in town</h2>
+        <div class ="service">
+            <h3>Dine In</h3>
+        </div>
+        <div class ="service">
+            <h3>Take-Out</h3>
+        </div>
+        <div class ="service">
+            <h3>Delivery</h3>
+        </div>
+        <div >
+            <img src="assets/images/table-in-restaurant.jpg" alt="table-in-restaurant">
+        </div>
     </main>
 </body>
 </html>
