fixed menu page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a class= "pageID" href="index.html">Home</a>
             </li>
             <li>
-                <a href="Menu.html">Menu</a>
+                <a href="menu.html">Menu</a>
             </li>
             <li>
                 <a href="about.html">About</a>
